removed WORDLE anchor link and attempted fix for vertical scroll on mobile

--- a/_static/style.css
+++ b/_static/style.css
@@ -93,7 +93,7 @@ body {
 @media only screen and (max-width: 600px) {
     .keyboard {
         gap: 0.5em;
-        grid-auto-rows: 3.8rem;
+        grid-auto-rows: 3.6rem;
         padding-inline: 0.3rem;
     }
 }
